syntax = "proto3";

package auth;

service AuthService {
  // Register a new user
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  
  // Login and get a token
  rpc Login (LoginRequest) returns (LoginResponse) {}
  
  // Validate a token
  rpc ValidateUser (ValidateUserRequest) returns (ValidateUserResponse) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  int32 id = 1;
  string email = 2;
  // passwordHash should NOT be returned
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}

message ValidateUserRequest {
  string token = 1;
}

message ValidateUserResponse {
  int32 userId = 1;
  bool isValid = 2;
}
